// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test available role list Available roles list Snapshots. 1`] = `
<div>
  <div>
    <div>
      <datalist
        id="available-roles-list"
      >
        <option
          value="TestRole1"
        />
        <option
          value="TestRole2"
        />
      </datalist>
      <input
        id="available-roles-list-input"
        list="available-roles-list"
        maxlength="30"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Test available role list Available roles list Snapshots. 2`] = `
<div>
  <div>
    <div>
      <datalist
        id="available-roles-list"
      />
      <input
        id="available-roles-list-input"
        list="available-roles-list"
        maxlength="30"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Test available role list Snapshots with messages about create new role. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div>
          <datalist
            id="available-roles-list"
          >
            <option
              value="TestRole1"
            />
            <option
              value="TestRole2"
            />
          </datalist>
          <input
            id="available-roles-list-input"
            list="available-roles-list"
            maxlength="30"
            type="text"
            value="test_value_1234"
          />
        </div>
        <div
          class="aprove-add-role"
        >
          <span>
            Would you like to create new role?
          </span>
           
          <br />
          <img
            alt="Approve"
            src="https://cdn-icons-png.flaticon.com/512/1828/1828743.png"
          />
          <img
            alt="Cancel"
            src="https://cdn-icons-png.flaticon.com/512/1828/1828939.png"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        <datalist
          id="available-roles-list"
        >
          <option
            value="TestRole1"
          />
          <option
            value="TestRole2"
          />
        </datalist>
        <input
          id="available-roles-list-input"
          list="available-roles-list"
          maxlength="30"
          type="text"
          value="test_value_1234"
        />
      </div>
      <div
        class="aprove-add-role"
      >
        <span>
          Would you like to create new role?
        </span>
         
        <br />
        <img
          alt="Approve"
          src="https://cdn-icons-png.flaticon.com/512/1828/1828743.png"
        />
        <img
          alt="Cancel"
          src="https://cdn-icons-png.flaticon.com/512/1828/1828939.png"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test available role list Snapshots with warning messages about added roles in past. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div>
          <datalist
            id="available-roles-list"
          >
            <option
              value="TestRole1"
            />
            <option
              value="TestRole2"
            />
          </datalist>
          <input
            id="available-roles-list-input"
            list="available-roles-list"
            maxlength="30"
            type="text"
            value="TestAddedRole3"
          />
        </div>
        <div>
          <span>
            Roles list includes this role.
          </span>
           
          <br />
          <img
            alt="Approve"
            src="https://cdn-icons-png.flaticon.com/512/1828/1828743.png"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        <datalist
          id="available-roles-list"
        >
          <option
            value="TestRole1"
          />
          <option
            value="TestRole2"
          />
        </datalist>
        <input
          id="available-roles-list-input"
          list="available-roles-list"
          maxlength="30"
          type="text"
          value="TestAddedRole3"
        />
      </div>
      <div>
        <span>
          Roles list includes this role.
        </span>
         
        <br />
        <img
          alt="Approve"
          src="https://cdn-icons-png.flaticon.com/512/1828/1828743.png"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test available role list Snapshots with warning messages about adding available role. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div>
          <datalist
            id="available-roles-list"
          >
            <option
              value="TestRole1"
            />
            <option
              value="TestRole2"
            />
          </datalist>
          <input
            id="available-roles-list-input"
            list="available-roles-list"
            maxlength="30"
            type="text"
            value="TestRole1"
          />
        </div>
        <div
          class="aprove-add-role"
        >
          <span>
            Would you like to add this role?
          </span>
           
          <br />
          <img
            alt="Approve"
            src="https://cdn-icons-png.flaticon.com/512/1828/1828743.png"
          />
          <img
            alt="Cancel"
            src="https://cdn-icons-png.flaticon.com/512/1828/1828939.png"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        <datalist
          id="available-roles-list"
        >
          <option
            value="TestRole1"
          />
          <option
            value="TestRole2"
          />
        </datalist>
        <input
          id="available-roles-list-input"
          list="available-roles-list"
          maxlength="30"
          type="text"
          value="TestRole1"
        />
      </div>
      <div
        class="aprove-add-role"
      >
        <span>
          Would you like to add this role?
        </span>
         
        <br />
        <img
          alt="Approve"
          src="https://cdn-icons-png.flaticon.com/512/1828/1828743.png"
        />
        <img
          alt="Cancel"
          src="https://cdn-icons-png.flaticon.com/512/1828/1828939.png"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
